<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="#F5F5F5"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/dark_blue"
            android:id="@+id/dietitian_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dietitian_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:textColor="@color/dark_blue"
            android:id="@+id/dietitian_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dietitian_user_id"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:backgroundTint="@color/dark_blue"
        android:backgroundTintMode="src_over"
        android:textColor="@color/faded_white"
        android:id="@+id/approve_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/approve_button"
        android:layout_marginStart="16dp"/>

    <Button
        android:backgroundTint="@color/dark_blue"
        android:backgroundTintMode="src_over"
        android:textColor="@color/faded_white"
        android:id="@+id/remove_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_button"
        android:layout_marginStart="16dp"/>
</LinearLayout>
