<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/faded_white"
    tools:context=".BarcodeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintBottom_toTopOf="@+id/add_items_to_inventory1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_expiry_date1"
        app:layout_constraintVertical_bias="0.89">

        <LinearLayout
            android:id="@+id/inventory_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp" />

    </ScrollView>



    <ImageButton
        android:id="@+id/back_icon_add1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/back_bar_icon_dark_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/back_arrow_dark_40" />


    <Button
        android:backgroundTint="@color/dark_blue"
        android:backgroundTintMode="src_over"
        android:textColor="@color/faded_white"
        android:id="@+id/add_item_to_list1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_item_to_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357" />

    <EditText
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/dark_blue"
        android:id="@+id/item_quantity1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:autofillHints="@string/enter_quantity_hint"
        android:ems="10"
        android:hint="@string/enter_quantity"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.378" />

    <Button
        android:backgroundTint="@color/dark_blue"
        android:backgroundTintMode="src_over"
        android:textColor="@color/faded_white"
        android:id="@+id/add_items_to_inventory1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_items_to_inventory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:backgroundTint="@color/dark_blue"
        android:backgroundTintMode="src_over"
        android:textColor="@color/faded_white"
        android:id="@+id/set_expiry_date1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_expiry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <Button
        android:id="@+id/scanBarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Scan Barcode"
        app:layout_constraintBottom_toTopOf="@+id/add_item_to_list1"
        app:layout_constraintEnd_toEndOf="@+id/add_item_to_list1"
        app:layout_constraintStart_toStartOf="@+id/add_item_to_list1"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>